--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/language-service": "~8.2.14",
     "@babel/core": "^7.7.7",
     "@storybook/angular": "^5.2.8",
+    "@storybook/storybook-deployer": "^2.8.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
