--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@babel/core": "^7.7.7",
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-knobs": "^5.2.8",
+    "@storybook/addon-notes": "^5.2.8",
+    "@storybook/addons": "^5.2.8",
     "@storybook/angular": "^5.2.8",
     "@storybook/storybook-deployer": "^2.8.1",
     "@types/jasmine": "~3.3.8",
