--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/addon-actions": "^5.2.8",
     "@storybook/addon-knobs": "^5.2.8",
     "@storybook/addon-notes": "^5.2.8",
+    "@storybook/addon-storysource": "^5.2.8",
     "@storybook/addons": "^5.2.8",
     "@storybook/angular": "^5.2.8",
     "@storybook/storybook-deployer": "^2.8.1",
